tests/fixtures/errors/private_in_public.gcl
// Error: pub param references private dim in its type annotation.
dim Velocity = Length / Time;
pub param speed: Velocity = 10.0 m/s;
